# elephagent

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh.md  agent_kit.py  agentmem.py  demo.tape  elephagent.py  pyproject.toml
.agent/: .gitignore  config.json
.agent/memory/: decisions.md  glossary.md  index.md  pitfalls.md  workflows.md
.agent/skills/: add-skill.md  check-memory.md  el-add-skill.md  el-handoff.md  el-import.md  el-init-memory.md  el-sync-memory.md  init-memory.md  remember.md
.agent/tools/: mcp_server.py  registry.json
.claude/: settings.local.json
.claude/skills/: add-skill.md  check-memory.md  remember.md  sync-memory.md
.claude/skills/add-skill/: SKILL.md
.claude/skills/check-memory/: SKILL.md
.claude/skills/el-add-skill/: SKILL.md
.claude/skills/el-check-memory/: SKILL.md
.claude/skills/el-handoff/: SKILL.md
.claude/skills/el-import/: SKILL.md
.claude/skills/el-init-memory/: SKILL.md
.claude/skills/el-remember/: SKILL.md
.claude/skills/el-sync-memory/: SKILL.md
.claude/skills/init-memory/: SKILL.md
.claude/skills/remember/: SKILL.md
.claude/skills/sync-memory/: SKILL.md
.codex/: config.toml
.cursor/: mcp.json
.cursor/rules/: add-skill.mdc  agent-memory.mdc  check-memory.mdc  el-add-skill.mdc  el-check-memory.mdc  el-handoff.mdc  el-import.mdc  el-init-memory.mdc  init-memory.mdc  remember.mdc  sync-memory.mdc
scripts/: demo_env.sh  demo_shell.sh  fake_claude.sh  make_demo.py  record_demo.sh
