[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmem"
version = "0.1.0"
description = "One memory layer for all your AI coding agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "memory", "claude", "cursor", "codex", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.scripts]
agentmem = "agentmem:main"

[project.urls]
Homepage = "https://github.com/zhicongsun/agentmem"
Repository = "https://github.com/zhicongsun/agentmem"
Issues = "https://github.com/zhicongsun/agentmem/issues"

[tool.setuptools]
py-modules = ["agentmem"]
