[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elephagent"
version = "0.1.1"
description = "Shared memory layer for all your AI coding agents — elephants never forget"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "memory", "claude", "cursor", "codex", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.scripts]
elephagent = "elephagent:main"

[project.urls]
Homepage = "https://github.com/zhicongsun/elephagent"
Repository = "https://github.com/zhicongsun/elephagent"
Issues = "https://github.com/zhicongsun/elephagent/issues"

[tool.setuptools]
py-modules = ["elephagent"]
